--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -73,7 +73,7 @@ jobs:
     - name: Archive production artifacts
       uses: actions/upload-artifact@v4
       with:
-        name: buld
+        name: buld-${{ matrix.c_compiler }}
         path: |
           ${{github.workspace}}/build
           
